Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16779

Assertion `!rw_lock_own(lock, RW_LOCK_S)' failed in rw_lock_s_lock_func upon purge

    XMLWordPrintable

Details

    Description

      Note: the assertion failure is similar to MDEV-14240, but it happens on purge, not on rollback, and the test case is essentially 10.3 (due to the invisible column which I couldn't get rid of), so I'm filing it separately just in case. Feel free to close as a duplicate if that's what it is.

      The test case is for reproducing purposes only, don't put it into the regression suite with the sleep

      --source include/have_innodb.inc
       
      SET sql_mode= '';
       
      CREATE TABLE t1 ( 
       c1 VARBINARY(1162) NULL,
       c2 BIT(15) NULL,
       c3 DATETIME NOT NULL DEFAULT '1900-01-01 00:00:00' INVISIBLE,
       vc2 BIT(15) AS (c2) VIRTUAL,
       vc3 DATETIME(2) AS (c3) PERSISTENT,
       pk SERIAL,
       UNIQUE(vc3,vc2,c1(64))
      ) ENGINE=InnoDB;
       
      INSERT INTO t1 (c1,c2,c3) VALUES
        ('x',b'110001','2014-03-19 01:16:48'),
        ('htvz',b'111101000','2025-10-25 14:18:08'),
        ('vzdf',b'0001','2029-09-05 00:00:00'),
        ('oztq',b'01010','1900-01-01 00:00:00'),
        ('qcmux',b'00100001111','1977-06-08 02:51:05'),
        ('mux',b'111000001110','2005-03-05 00:00:00'),
        ('m',b'0110000011000','2002-05-13 12:09:17'),
        (REPEAT('a',552),b'101110001110100','2026-12-14 18:55:47'),
        ('c',b'0101100','1996-09-28 23:55:15'),
        ('z',b'0000010001110','2017-03-03 07:32:13'),
        ('ykpr',b'101111011100000','2005-05-18 16:59:24'),
        ('p',b'00','2010-02-20 08:56:07'),
        ('agyrw',b'101000','2006-11-15 00:00:00'),
        ('yrwswo',b'0','2008-07-03 17:21:36'),
        ('wsw',b'111110','1989-12-04 16:47:29'),
        (NULL,b'0000100','2025-02-16 15:41:51'),
        ('otq',NULL,'2025-02-21 22:43:57'),
        ('qllacxf',b'0010111110111','2013-08-21 21:38:21'),
        ('far',b'1110','1973-05-26 00:00:00'),
        ('r',b'011','2010-07-21 13:21:08'),
        (NULL,b'1100','1983-11-02 04:11:35'),
        ('iax',b'1101100','1985-08-07 00:00:00'),
        (NULL,b'10110111','2005-07-05 00:00:00'),
        ('xjbj',b'00110111100','2018-05-10 17:20:18'),
        (REPEAT('b',28),b'011110010101','1978-10-07 00:00:00'),
        (REPEAT('c',137),b'10011000','1983-04-15 14:57:46'),
        ('zyoml',b'0011100001100','1983-08-02 02:08:58'),
        ('m',b'01110101','1979-06-17 12:30:53'),
        ('m',NULL,'1977-03-20 15:29:40'),
        ('qmecq',b'1000001001','2025-04-18 06:13:07'),
        ('ecq',b'10','1900-01-01 00:00:00'),
        ('qikp',b'001001110000','2006-09-05 05:13:26'),
        ('d',b'01000000110','1988-06-12 17:11:19'),
        ('d',b'110101010000100','1980-06-19 18:18:52'),
        ('',b'001000100000','2010-09-21 20:01:03'),
        ('',b'0000001110','1985-09-21 15:45:50'),
        ('z',b'11011110','2009-12-05 16:55:27'),
        (NULL,NULL,'2029-08-25 19:43:48'),
        ('',b'110001101010','1991-12-22 16:38:20'),
        ('jx',b'1101010','2030-06-25 00:00:00'),
        ('kt',b'0111011101111','2007-01-05 15:12:48'),
        (NULL,NULL,'2016-05-11 07:15:41'),
        ('',b'01','1900-01-01 00:00:00'),
        ('k',b'0001001111','1994-04-01 09:49:43'),
        ('ud',b'101001','2003-03-12 19:50:02'),
        ('n',b'010110','2015-05-26 19:37:44'),
        ('sbv',b'0001111001','2025-09-13 20:24:00'),
        ('',b'00001','2030-05-17 00:44:40'),
        ('av',b'01110100111','1992-01-07 07:56:37'),
        ('y',b'10100100101101','2034-07-18 08:44:59'),
        ('k',b'01001000','2005-12-12 18:41:49'),
        ('cczmhdl',b'1011000','2009-03-18 12:44:18'),
        (REPEAT('d',32),b'1001','2030-09-04 23:54:30'),
        ('hdlcs',b'0100','2010-11-23 18:49:06'),
        ('cs',NULL,'2012-06-19 02:57:52'),
        ('r',b'1101101','2018-01-12 02:40:57'),
        (NULL,NULL,'2022-06-24 04:21:53'),
        (REPEAT('e',31),b'0000101011','1900-01-01 00:00:00'),
        ('k',b'111001','2008-04-25 01:41:57'),
        (NULL,b'001110110111100','1993-08-04 09:25:00'),
        (REPEAT('f',1162),b'1011','2015-10-06 00:00:00'),
        (NULL,b'001000000','2003-11-14 00:08:57'),
        ('zpy',b'0000011001','2013-06-20 13:28:35'),
        ('ybkwf',b'011100','2023-02-10 00:00:00'),
        ('kwf',b'1001010','1900-01-01 00:00:00'),
        ('c',b'011111011','1993-06-15 13:55:23'),
        ('jlbb',b'001','2028-08-27 08:08:38'),
        ('bulhe',b'1001010101001','1988-11-26 19:14:32'),
        ('',b'1','1978-12-23 00:00:00'),
        ('lhexv',b'00001','2024-06-12 12:25:47'),
        (NULL,b'01011100111','1900-01-01 00:00:00'),
        (NULL,b'1001100110011','1980-02-10 00:00:00'),
        ('clt',b'00110000111101','1977-07-15 00:00:00'),
        ('',NULL,'2017-03-05 08:09:46'),
        (REPEAT('g',194),b'010010001001','1982-07-23 18:55:58'),
        ('fvnqyug',b'10011111100111','1971-08-08 00:00:00'),
        ('m',b'010010','1990-09-18 00:00:00'),
        ('yug',b'0101011','2002-02-05 13:14:24'),
        ('gvnmt',b'0000','1984-07-23 00:00:00'),
        ('nm',b'001110011110101','1900-01-01 00:00:00'),
        ('z',b'1001101100010','2016-12-27 17:02:14'),
        ('ox',b'0010','1997-11-02 04:18:10'),
        ('y',b'0001010110','2009-10-24 00:00:00'),
        ('bqhi',b'10','1989-05-23 00:00:00'),
        (NULL,b'101','1986-10-01 09:41:24'),
        ('qv',NULL,'2033-07-17 16:34:14'),
        ('pkx',b'011011001','2024-05-21 00:00:00'),
        ('o',b'1011110000100','2023-02-24 07:46:27'),
        (REPEAT('h',198),b'110001011011','2000-09-25 11:43:52'),
        ('tkii',b'111101011','2002-08-02 02:21:14'),
        ('ip',b'1011','1900-01-01 00:00:00'),
        ('',NULL,'2022-02-05 19:41:14'),
        (NULL,b'110','1900-01-01 00:00:00'),
        ('itvnfl',b'1111100110','1999-07-19 00:00:00'),
        ('nflz',b'01110000000','1979-04-28 18:24:12'),
        ('t',b'10011','2018-03-24 11:24:45'),
        ('a',b'1111111100','2002-12-16 00:36:37'),
        ('s',b'1','2003-11-05 21:03:06'),
        ('ef',b'00000010100','2000-12-08 07:14:21'),
        ('sg',b'1101','2028-08-22 10:16:55'),
        ('w',b'000011','2032-07-22 05:24:23'),
        ('j',b'100001111101100','2014-05-17 16:34:38'),
        ('',b'0000110011011','2017-09-03 05:06:40'),
        ('pbrygv',b'111110011110100','1994-09-04 00:00:00'),
        ('yg',b'1110011110','1976-02-07 21:16:38'),
        ('vha',b'011100001','2005-07-13 11:26:18'),
        ('lefeoy',b'1110100100','1984-02-22 00:00:00'),
        ('',b'101000101','2035-05-24 22:22:06'),
        ('oyoiozi',NULL,'2003-11-12 06:59:19'),
        (NULL,b'1','2032-10-12 11:45:16'),
        ('io',b'001010000','2034-02-22 15:28:54'),
        (NULL,b'0010101111','1990-07-06 00:00:00'),
        ('vhmhyx',b'1101001','1974-04-10 15:31:45'),
        (NULL,b'1011','1976-10-20 11:14:32'),
        ('j',b'0100001','2000-02-08 00:00:00'),
        (NULL,b'010','1998-11-28 10:56:25'),
        ('x',b'10','1973-01-08 00:55:15'),
        ('q',b'1100110011','2016-03-05 13:47:23'),
        ('b',b'01101000010110','1981-02-23 00:00:00'),
        ('gfs',b'0','2015-09-08 13:01:10'),
        ('',b'01011','2026-03-04 00:00:00'),
        ('gpf',b'1','1979-03-11 00:00:00'),
        (REPEAT('i',260),b'011100000100111','1995-03-21 20:26:06'),
        ('uyedvin',b'1','2032-04-11 12:39:06'),
        ('dvin',b'1','1997-03-20 12:50:17'),
        ('inhdg',b'110110110111','1980-04-22 21:05:53'),
        ('nhd',b'1','2006-10-03 19:18:42'),
        ('dg',b'001','2000-05-25 13:26:14'),
        (NULL,b'1','1900-01-01 00:00:00'),
        ('pd',b'1011','2005-08-06 00:36:27'),
        (NULL,b'00110','1986-09-26 07:48:47'),
        ('kdx',b'00010010111001','2008-07-16 02:38:22'),
        (REPEAT('j',408),b'001000011','1976-03-04 03:38:50'),
        ('k',b'0111101111','2018-12-08 21:07:40'),
        ('n',b'1011000','2005-02-08 19:33:10'),
        ('czo',b'111010011','2012-04-05 22:27:29'),
        ('hcggvw',NULL,'2013-07-25 20:22:29'),
        ('gvwuabs',b'00100010000','2004-11-16 22:50:17'),
        ('uabs',b'11','2029-08-01 19:45:58'),
        ('s',b'0100000','1996-11-07 12:38:15'),
        ('dum',b'00','1991-03-19 04:02:46'),
        ('',b'1001111','1998-03-15 11:32:08'),
        ('e',b'1','2024-02-02 10:19:24'),
        ('ec',b'0','2034-04-17 00:00:00'),
        ('ep',b'100101001001','1995-10-08 00:00:00'),
        ('',b'11','1900-01-01 00:00:00'),
        ('xcpx',b'0','2016-07-22 07:51:25'),
        (NULL,NULL,'1974-05-28 00:00:00'),
        ('pnacf',b'101110001011101','2008-10-27 04:58:20'),
        ('i',b'0111110010101','2016-01-14 05:27:05'),
        ('js',b'010101100011011','2014-12-17 16:11:21'),
        ('d',b'110','1977-10-14 16:21:50'),
        ('tx',NULL,'2011-08-20 20:01:36'),
        ('uc',b'1100110011110','1981-10-12 09:01:49'),
        ('c',b'1000010011','1976-09-01 05:54:04'),
        ('o',b'110000101','1900-01-01 00:00:00'),
        ('xkpd',b'0','1976-08-06 05:22:57'),
        ('c',b'000011101101','2014-12-17 11:53:23'),
        ('d',NULL,'2028-05-13 13:50:21'),
        (NULL,b'00','2028-07-23 21:57:10'),
        (REPEAT('k',139),b'00000','1978-08-12 17:10:16'),
        ('zg',b'111000111','2008-12-01 17:25:38'),
        ('dp',b'101','2017-01-21 15:27:57'),
        ('bcjb',b'100001010','2005-09-09 22:04:21'),
        ('',b'101','2031-05-12 07:26:00'),
        ('jbyk',b'1000100','2032-03-12 08:48:30'),
        (REPEAT('l',55),b'0001','1971-01-08 00:00:00'),
        ('l',b'000001','2011-05-22 20:24:25'),
        ('ck',b'10001','1975-11-21 08:18:55'),
        ('g',b'100001111000101','2000-04-14 00:00:00'),
        ('x',b'0111100','2017-02-25 16:44:25'),
        ('e',b'00101100101111','2018-01-16 11:41:05'),
        (NULL,b'10011','2021-03-03 11:33:07'),
        (NULL,b'1010','2010-06-19 13:19:10'),
        ('hk',b'00011110011','1991-12-05 00:00:00'),
        ('jmh',b'1010','1989-04-19 00:00:00'),
        ('h',b'01011110000','1993-07-08 07:01:15'),
        ('t',b'1011111010011','1992-05-27 12:19:18'),
        (NULL,b'01111','2020-12-02 02:06:33'),
        ('r',b'00','2016-11-13 11:49:43'),
        (NULL,b'011100000110','2008-07-08 03:19:11'),
        ('k',b'100011100','1984-03-07 10:05:56'),
        ('m',b'100011100','1981-10-14 19:07:09'),
        ('hjj',NULL,'1982-01-10 20:25:55'),
        ('tg',b'0101001011110','1971-11-16 07:13:41'),
        ('ppcyynrl',b'111010010','2022-12-03 11:41:18'),
        ('c',b'1111','2017-10-24 00:35:26'),
        ('ynr',NULL,'2028-10-14 05:03:02'),
        ('r',b'1011101010110','2014-12-21 05:41:40'),
        ('zhgef',b'10110110011','2010-07-23 11:08:42'),
        ('e',b'1101111011100','2019-08-22 12:07:49'),
        ('k',b'1111','2025-06-07 00:00:00'),
        (NULL,b'010011100','2000-01-09 10:58:46'),
        ('w',b'111','2034-07-05 02:55:17'),
        (NULL,b'10','1978-09-04 00:00:00'),
        (REPEAT('m',73),b'101','1991-10-25 17:01:02'),
        ('dlpa',b'11110101011','2032-09-21 02:14:36'),
        ('v',b'00','1997-04-19 10:11:54'),
        ('tgaef',b'1','2010-05-12 13:14:10'),
        ('e',b'1001111','2024-03-01 05:26:19'),
        ('e',b'10','1984-03-17 00:00:00'),
        ('qqp',b'110000','2008-02-24 21:59:17'),
        ('rochoc',b'001010000100','2034-08-01 00:00:00'),
        ('hocz',NULL,'1900-01-01 00:00:00'),
        (NULL,b'00010001','2034-11-08 00:00:00'),
        ('m',b'011100000110010','2030-10-19 22:40:03'),
        ('xgnt',b'000111110011010','1984-11-17 22:08:19'),
        ('ntrzd',b'1101000100100','2008-04-28 12:07:03'),
        ('zd',NULL,'2033-09-22 18:22:34'),
        ('k',b'0','2025-07-19 00:00:00'),
        ('upn',b'1','1992-09-10 19:28:08'),
        ('x',b'0','2005-06-05 14:43:15'),
        ('',b'001011100','2009-06-17 05:38:46'),
        ('ahnc',b'0111','1987-02-01 07:47:52'),
        ('c',b'00001000110111','2024-01-16 00:00:00'),
        ('ucth',b'11110','1983-03-27 00:53:54'),
        ('',b'111000010','1994-10-21 22:33:10'),
        (REPEAT('n',453),b'10101101101110','1987-10-19 01:06:11'),
        ('ent',b'10','1983-12-13 12:18:20'),
        ('tnlld',b'00011101001','2035-03-26 00:00:00'),
        ('',b'1','1971-11-11 00:00:00'),
        ('ldk',b'111001','2029-09-25 00:00:00'),
        ('t',b'01111','2007-08-11 19:50:27'),
        ('',b'100011011111100','1994-11-19 00:00:00'),
        ('jwgcv',b'1100','1993-07-27 16:50:51'),
        ('cvvhbbq',b'101011011110110','1998-05-14 16:31:44'),
        ('vhb',b'10010100101','2012-06-04 22:20:28'),
        ('b',NULL,'1980-08-16 07:06:12'),
        ('qt',NULL,'1900-01-01 00:00:00'),
        (REPEAT('o',26),b'0100','1998-02-12 19:23:50'),
        ('y',b'11000','2009-04-14 15:17:53'),
        ('',b'0000111','2012-02-05 19:02:01'),
        ('a',b'1111100000','1971-12-16 11:11:35'),
        ('xe',b'0010001','2030-10-05 10:24:41'),
        ('w',b'01111111000000','2020-05-06 09:25:38'),
        ('tl',b'011100100','2006-04-22 22:22:52'),
        ('bdq',b'100101','2000-06-11 12:20:43'),
        ('ql',b'0','1983-03-07 17:29:42'),
        (NULL,b'01000001101101','2023-10-03 00:14:15'),
        ('ljyzfy',b'001110000101','1900-01-01 00:00:00'),
        (NULL,b'1001','1993-11-01 00:00:00'),
        (NULL,b'10011101000110','1900-01-01 00:00:00'),
        ('yrkb',NULL,'2024-11-12 12:07:13'),
        ('bngi',b'00','1978-11-06 03:54:32'),
        ('ix',b'01','1900-01-01 00:00:00'),
        ('myfhrp',b'1','1900-01-01 00:00:00'),
        ('fhrpg',b'101111101011','2033-08-12 00:00:00'),
        (REPEAT('p',163),b'1010111010','1979-11-07 13:54:12'),
        ('p',b'11010001001','1900-01-01 00:00:00'),
        (REPEAT('r',51),NULL,'1900-01-01 00:00:00'),
        ('m',b'11110111','1900-01-01 00:00:00'),
        ('lrzade',b'0','1992-07-15 23:41:28'),
        (REPEAT('s',498),b'1111','2035-10-06 11:16:31'),
        ('rzbdqpea',NULL,'1900-01-01 00:00:00'),
        (NULL,b'11000101','2008-10-06 06:25:31'),
        ('d',b'0111111011','2023-11-05 16:02:59'),
        ('peawuqf',b'0','1980-09-10 09:10:01'),
        ('w',b'10110011','1997-09-21 10:02:02'),
        (NULL,b'101010','2001-12-16 06:40:12'),
        ('xwp',NULL,'2013-01-19 19:27:48'),
        ('pcv',b'00111','2018-03-27 03:54:28'),
        ('',b'0','1971-12-13 03:42:35'),
        ('o',b'10000101','1990-01-26 00:00:00'),
        ('ya',NULL,'1979-06-09 04:22:34'),
        ('t',b'000000001010','2027-10-17 00:00:00'),
        ('o',NULL,'2012-02-27 00:35:25'),
        ('sdba',b'10111101000','2034-08-24 02:10:03'),
        ('',NULL,'2008-05-11 12:17:52'),
        ('ar',b'0101000010101','2033-07-19 19:27:58'),
        (REPEAT('t',387),b'01111000100010','1900-01-01 00:00:00'),
        ('a',b'0','1980-07-03 16:03:05'),
        ('mmwv',b'01100','1900-01-01 00:00:00'),
        ('w',NULL,'2022-05-01 16:31:35'),
        ('vxq',b'0011110','1971-10-20 00:00:00'),
        ('k',b'010011','2002-10-25 09:09:32'),
        (NULL,b'1001','1900-01-01 00:00:00'),
        ('e',b'01010000110','1900-01-01 00:00:00'),
        ('d',b'011000','2014-11-21 15:05:24'),
        ('aobewxm',NULL,'1999-09-23 19:37:42'),
        ('o',b'010000011','1999-09-13 00:00:00'),
        (NULL,b'111110100100000','2033-11-10 02:49:07'),
        (NULL,b'10000','1900-01-01 00:00:00'),
        ('ogd',b'0000111110','1991-02-21 14:48:19'),
        ('oia',b'1101111','1982-01-04 15:07:17'),
        ('hprchwvkin',b'010110','1900-01-01 00:00:00'),
        ('prch',b'00110','1984-05-13 16:45:27'),
        ('hwvki',b'1','1977-02-12 08:31:45'),
        ('k',b'011000110','1971-06-19 00:00:00'),
        ('ns',b'101110','1990-09-12 00:23:53'),
        ('n',b'0001010111100','2023-03-16 21:22:01'),
        ('uedk',b'011101','2019-05-15 03:35:48');
       
      SELECT * FROM t1 INTO OUTFILE 'load_t1';
      LOAD DATA INFILE 'load_t1' REPLACE INTO TABLE t1;
       
      --echo # At this point, if we wait a bit, it crashes
      --sleep 1
       
      # Cleanup
      DROP TABLE t1;
      

      10.3 141a5b2484

      mysqld: /data/src/10.3/storage/innobase/include/sync0rw.ic:282: void rw_lock_s_lock_func(rw_lock_t*, ulint, const char*, unsigned int): Assertion `!rw_lock_own(lock, RW_LOCK_S)' failed.
      180719 13:21:57 [ERROR] mysqld got signal 6 ;
       
      #7  0x00007fda1a8ccee2 in __assert_fail () from /lib/x86_64-linux-gnu/libc.so.6
      #8  0x000056119a2f9d5c in rw_lock_s_lock_func (lock=0x7fda0f7db7d8, pass=0, file_name=0x56119a835500 "/data/src/10.3/storage/innobase/row/row0purge.cc", line=100) at /data/src/10.3/storage/innobase/include/sync0rw.ic:282
      #9  0x000056119a2fa77b in pfs_rw_lock_s_lock_func (lock=0x7fda0f7db7d8, pass=0, file_name=0x56119a835500 "/data/src/10.3/storage/innobase/row/row0purge.cc", line=100) at /data/src/10.3/storage/innobase/include/sync0rw.ic:661
      #10 0x000056119a30c95a in buf_page_get_gen (page_id=..., page_size=..., rw_latch=1, guess=0x0, mode=10, file=0x56119a835500 "/data/src/10.3/storage/innobase/row/row0purge.cc", line=100, mtr=0x7fd9f77fcad0, err=0x7fd9f77fb910) at /data/src/10.3/storage/innobase/buf/buf0buf.cc:4986
      #11 0x000056119a2cc9dd in btr_cur_search_to_nth_level_func (index=0x7fd9c00871a8, level=0, tuple=0x7fd9e4014628, mode=PAGE_CUR_LE, latch_mode=1, cursor=0x56119dd42370, ahi_latch=0x0, file=0x56119a835500 "/data/src/10.3/storage/innobase/row/row0purge.cc", line=100, mtr=0x7fd9f77fcad0, autoinc=0) at /data/src/10.3/storage/innobase/btr/btr0cur.cc:1299
      #12 0x000056119a2e3aef in btr_pcur_open_with_no_init_func (index=0x7fd9c00871a8, tuple=0x7fd9e4014628, mode=PAGE_CUR_LE, latch_mode=1, cursor=0x56119dd42370, ahi_latch=0x0, file=0x56119a835500 "/data/src/10.3/storage/innobase/row/row0purge.cc", line=100, mtr=0x7fd9f77fcad0) at /data/src/10.3/storage/innobase/include/btr0pcur.ic:527
      #13 0x000056119a2e4ae0 in btr_pcur_restore_position_func (latch_mode=1, cursor=0x56119dd42370, file=0x56119a835500 "/data/src/10.3/storage/innobase/row/row0purge.cc", line=100, mtr=0x7fd9f77fcad0) at /data/src/10.3/storage/innobase/btr/btr0pcur.cc:362
      #14 0x000056119a1e7dde in row_purge_reposition_pcur (mode=1, node=0x56119dd422d8, mtr=0x7fd9f77fcad0) at /data/src/10.3/storage/innobase/row/row0purge.cc:100
      #15 0x000056119a1e864c in row_purge_poss_sec (node=0x56119dd422d8, index=0x7fd9c0075aa8, entry=0x7fd9e4014038, sec_pcur=0x7fd9f77fd050, sec_mtr=0x7fd9f77fd2b0, is_tree=true) at /data/src/10.3/storage/innobase/row/row0purge.cc:339
      #16 0x000056119a1e89ed in row_purge_remove_sec_if_poss_tree (node=0x56119dd422d8, index=0x7fd9c0075aa8, entry=0x7fd9e4014038) at /data/src/10.3/storage/innobase/row/row0purge.cc:448
      #17 0x000056119a1e95c9 in row_purge_remove_sec_if_poss (node=0x56119dd422d8, index=0x7fd9c0075aa8, entry=0x7fd9e4014038) at /data/src/10.3/storage/innobase/row/row0purge.cc:704
      #18 0x000056119a1e97a7 in row_purge_del_mark (node=0x56119dd422d8) at /data/src/10.3/storage/innobase/row/row0purge.cc:769
      #19 0x000056119a1eaca4 in row_purge_record_func (node=0x56119dd422d8, undo_rec=0x7fd9ec01c308 "", thr=0x56119dd42108, updated_extern=false) at /data/src/10.3/storage/innobase/row/row0purge.cc:1163
      #20 0x000056119a1eafc8 in row_purge (node=0x56119dd422d8, undo_rec=0x7fd9ec01c308 "", thr=0x56119dd42108) at /data/src/10.3/storage/innobase/row/row0purge.cc:1228
      #21 0x000056119a1eb36f in row_purge_step (thr=0x56119dd42108) at /data/src/10.3/storage/innobase/row/row0purge.cc:1314
      #22 0x000056119a16f678 in que_thr_step (thr=0x56119dd42108) at /data/src/10.3/storage/innobase/que/que0que.cc:1046
      #23 0x000056119a16f8ab in que_run_threads_low (thr=0x56119dd42108) at /data/src/10.3/storage/innobase/que/que0que.cc:1108
      #24 0x000056119a16fa9c in que_run_threads (thr=0x56119dd42108) at /data/src/10.3/storage/innobase/que/que0que.cc:1148
      #25 0x000056119a23bfdb in srv_task_execute () at /data/src/10.3/storage/innobase/srv/srv0srv.cc:2437
      #26 0x000056119a23c180 in srv_worker_thread (arg=0x0) at /data/src/10.3/storage/innobase/srv/srv0srv.cc:2485
      #27 0x00007fda1c5a3494 in start_thread (arg=0x7fd9f77fe700) at pthread_create.c:333
      #28 0x00007fda1a98993f in clone () from /lib/x86_64-linux-gnu/libc.so.6
      

      The test started failing in 10.3 after this merge:

      commit 934d5f95d33ee6980ede7e1990b519fd13bee327
      Merge: b4c377f 8b0d4cf
      Author: Marko Mäkelä <marko.makela@mariadb.com>
      Date:   Fri Jul 6 18:17:24 2018 +0300
       
          Merge 10.2 into 10.3
      

      but since the test case is 10.3-only, I can't check it on 10.2.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 7h 10m
                  1d 7h 10m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.